--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/output.css">
 </head>
-<body class="bg-blue-300 d-flex flex">
+<body>
+    
     
 </body>
 </html>
