Add header section and update Tailwind config colors

--- a/index.html
+++ b/index.html
@@ -1,13 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/output.css">
 </head>
+
 <body>
-    
-    
+
+
+    <section class="bg-[url('../assets/header-hero-1.png')]  bg-no-repeat bg-cover h-[737px]">
+        <!-- Header -->
+        <header class="flex justify-between items-start max-w-7xl mx-auto px-4 pt-16">
+            <div class="flex items-center">
+                <a href="#" class="">
+                    <img src="assets/logo-main-light.png" alt="" width="160">
+                </a>
+                <ul class="flex text-textPrimary mr-8 gap-6 text-lg">
+                    <li>
+                        <a href="#">
+                            خانه
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            فروشگاه
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            ژانر ها
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            پلتفرم ها
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            تخفیف ها
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            باندل ها
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            درباره ما
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            تماس با ما
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div>
+                    <div class="flex flex-row-reverse gap-0.5">
+                        <button id="login-btn" class="py-2 px-4 text-textPrimary bg-secondary rounded-tl-3xl rounded-bl-3xl">ثبت نام</button>
+                        <button id="register-btn" class="py-2 px-4 text-textPrimary bg-secondary rounded-tr-3xl rounded-br-3xl">ورود</button>
+                    </div>
+                    <div class="flex flex-row-reverse mt-2">
+                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                            <img src="assets/social-icons/telegram.svg" width="22" alt="Telegram-icon">
+                        </a>
+                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                            <img src="assets/social-icons/instagram.svg" width="22" alt="instagram-icon">
+                        </a>
+                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                            <img src="assets/social-icons/gmail.svg" width="22" alt="Gmail-icon">
+                        </a>
+                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                            <img src="assets/social-icons/whatsapp.svg" width="22" alt="Whatsapp-icon">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <!-- Hero/Slider -->
+         <section></section>
+
+    </section>
+
+
+
 </body>
+
 </html>
