--- a/index.html
+++ b/index.html
@@ -11,83 +11,203 @@
 <body>
 
 
-    <section class="bg-[url('../assets/header-hero-1.png')]  bg-no-repeat bg-cover h-[737px]">
-        <!-- Header -->
-        <header class="flex justify-between items-start max-w-7xl mx-auto px-4 pt-16">
-            <div class="flex items-center">
-                <a href="#" class="">
-                    <img src="assets/logo-main-light.png" alt="" width="160">
-                </a>
-                <ul class="flex text-textPrimary mr-8 gap-6 text-lg">
-                    <li>
-                        <a href="#">
-                            خانه
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            فروشگاه
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            ژانر ها
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            پلتفرم ها
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            تخفیف ها
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            باندل ها
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            درباره ما
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            تماس با ما
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div>
+    <section class="relative bg-[url('../assets/header-hero-1.png')]  bg-no-repeat bg-cover bg-center min-h-[600px] md:min-h-[737px] lg:min-h-[100vh]">
+            <!-- Header -->
+            <header class="flex justify-between items-start max-w-10 xl:max-w-7xl mx-auto px-4 pt-14">
+                <div class="flex items-center">
+                    <a href="#" class="">
+                        <img src="assets/logo-main-light.png" alt="" width="160">
+                    </a>
+                    <ul class="flex text-textPrimary mr-8 gap-8 text-lg">
+                        <li>
+                            <a href="#">
+                                خانه
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                فروشگاه
+                            </a>
+                        </li>
+                        <li class="relative group">
+                            <a href="#" class="flex">ژانر ها
+                                <img src="assets/hero-slider-icons/angle-down.svg" width="32" class="-mr-1 -mt-1"
+                                    alt="Angle-down">
+                            </a>
+                            <!-- Submenu -->
+                            <ul
+                                class="absolute opacity-0 invisible group-hover:opacity-100 group-hover:visible shadow rounded-sm top-8 border-t-4 text-sm bg-textPrimary text-primary border-secondary whitespace-nowrap transition-all duration-300">
+                                <li
+                                    class="border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    ورزشی
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    جنایی و ترسناک
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    تیراندازی
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    شبیه سازی
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    رانندگی و ریسینگ
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="relative group">
+                            <a href="#" class="flex">
+                                پلتفرم ها
+                                <img src="assets/hero-slider-icons/angle-down.svg" width="32" class="-mr-1 -mt-1"
+                                    alt="Angle-down">
+                            </a>
+                            <!-- Submenu -->
+                            <ul
+                                class="absolute opacity-0 invisible group-hover:opacity-100 group-hover:visible shadow rounded-sm top-8 border-t-4 text-sm bg-textPrimary text-primary border-secondary whitespace-nowrap transition-all duration-300">
+                                <li
+                                    class="border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    کامپیوتر
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    پلی استیشن
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    ایکس باکس
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    استیم
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    نینتندو
+                                </li>
+                                <li
+                                    class="border-t border-[#eee] py-3 pr-4 pl-10 font-medium hover:text-secondary cursor-pointer">
+                                    بتل نت
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">
+                                تخفیف ها
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                باندل ها
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                درباره ما
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                تماس با ما
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <div>
-                    <div class="flex flex-row-reverse gap-0.5">
-                        <button id="login-btn" class="py-2 px-4 text-textPrimary bg-secondary rounded-tl-3xl rounded-bl-3xl">ثبت نام</button>
-                        <button id="register-btn" class="py-2 px-4 text-textPrimary bg-secondary rounded-tr-3xl rounded-br-3xl">ورود</button>
-                    </div>
-                    <div class="flex flex-row-reverse mt-2">
-                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
-                            <img src="assets/social-icons/telegram.svg" width="22" alt="Telegram-icon">
-                        </a>
-                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
-                            <img src="assets/social-icons/instagram.svg" width="22" alt="instagram-icon">
-                        </a>
-                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
-                            <img src="assets/social-icons/gmail.svg" width="22" alt="Gmail-icon">
-                        </a>
-                        <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
-                            <img src="assets/social-icons/whatsapp.svg" width="22" alt="Whatsapp-icon">
-                        </a>
+                    <div>
+                        <div class="flex flex-row-reverse gap-0.5">
+                            <button id="login-btn"
+                                class="py-2 px-4 text-textPrimary bg-secondary rounded-tl-3xl rounded-bl-3xl">ثبت
+                                نام</button>
+                            <button id="register-btn"
+                                class="py-2 px-4 text-textPrimary bg-secondary rounded-tr-3xl rounded-br-3xl">ورود</button>
+                        </div>
+                        <div class="flex flex-row-reverse mt-2">
+                            <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                                <img src="assets/social-icons/telegram.svg" width="22" alt="Telegram-icon">
+                            </a>
+                            <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                                <img src="assets/social-icons/instagram.svg" width="22" alt="instagram-icon">
+                            </a>
+                            <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                                <img src="assets/social-icons/gmail.svg" width="22" alt="Gmail-icon">
+                            </a>
+                            <a href="#" class="p-2 rounded-full hover:bg-secondary transition-colors">
+                                <img src="assets/social-icons/whatsapp.svg" width="22" alt="Whatsapp-icon">
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
+            </header>
 
-        <!-- Hero/Slider -->
-         <section></section>
+            <!-- Hero/Slider -->
+            <section class="flex flex-col max-w-7xl mx-auto items-center text-textPrimary pt-20">
+                <!-- Tags and Genre -->
+                <div class="flex items-center justify-between gap-10">
+                    <div class="flex items-center">
+                        <img src="assets/hero-slider-icons/monitor.svg" width="32" alt="Monitor-icon">
+                        <div class="mr-2 pt-1 text-lg font-bold">
+                            <a href="#">PlayStation</a>
+                            <span>,</span>
+                            <a href="#">Steam</a>
+                        </div>
+                    </div>
+                    <div class="flex items-center">
+                        <img src="assets/hero-slider-icons/tag.svg" width="32" alt="Tag-icon">
+                        <div class="mr-2 pt-1 text-lg font-bold">
+                            <a href="#">Sport</a>
+                            <span>,</span>
+                            <a href="#">Simulation</a>
+                        </div>
+                    </div>
 
+
+                </div>
+                <!-- Title -->
+                <div class="text-center">
+                    <h2 class="text-8xl mt-10 font-black font-sans">EA: FC26</h2>
+                    <p class=" mt-5">
+                        تجربه‌ای بی‌نظیر از دنیای فوتبال رو ارائه میده، جایی که می‌تونی مهارت‌های خودت رو در زمین مسابقه
+                        به
+                        چالش بکشی. با تیم مورد علاقه‌ات بازی کن، تاکتیک‌های حرفه‌ای بچین و در لیگ‌ها و مسابقات جهانی
+                        بدرخش.
+                        گرافیک فوق‌العاده و گیم‌پلی روان باعث میشه هر حرکت، پاس و گل واقعی و هیجان‌انگیز باشه. از کنترل
+                        دقیق
+                        بازیکنان تا لحظات تاکتیکی پیچیده، همه چیز برای ایجاد تجربه‌ای نزدیک به فوتبال واقعی طراحی شده.
+                    </p>
+                </div>
+                <!-- CTA -->
+                <div class="flex items-center justify-between gap-10 mt-10">
+                    <button
+                        class="relative px-4 py-2 border-b-4 hover:border-secondary text-center text-lg overflow-hidden group transition-colors duration-300">
+                        <span
+                            class="flex items-center justify-center h-full transition-transform duration-300 transform group-hover:-translate-y-10">
+                            افزودن به سبد خرید
+                        </span>
+                        <span
+                            class="absolute inset-0 flex items-center justify-center opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+                            <img src="assets/hero-slider-icons/add-to-cart.svg" width="32" alt="Add to Cart">
+                        </span>
+                    </button>
+                    <button
+                        class="px-4 py-2 border-b-4 hover:border-secondary hover:text-secondary text-center text-lg transition-colors duration-300">جزئیات
+                        بیشتر
+                    </button>
+                </div>
+                <!-- Slider Bullets -->
+                <div class="absolute bottom-4 flex gap-2">
+                    <div class="border-2 rounded-full border-textPrimary bg-textPrimary w-5 h-5">
+                    </div>
+                    <div class="border-2 rounded-full border-textPrimary hover:bg-textSecondary cursor-pointer w-5 h-5">
+                    </div>
+                    <div class="border-2 rounded-full border-textPrimary hover:bg-textSecondary cursor-pointer w-5 h-5">
+                    </div>
+                </div>
+            </section>
     </section>
 
 
