feat: add feature cards section

--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
         </header>
 
         <!-- Hero/Slider -->
-        <section class="flex flex-col max-w-80  sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-6xl mx-auto items-center text-textPrimary pt-20">
+        <section
+            class="flex flex-col max-w-80 sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-6xl mx-auto items-center text-textPrimary pt-20">
             <!-- Tags and Genre -->
             <div class="flex flex-col md:flex-row items-center justify-between gap-2 lg:gap-10">
                 <div class="flex items-center">
@@ -281,6 +282,81 @@
             </div>
         </section>
     </section>
+
+    <!-- Feature -->
+    <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row gap-4">
+        <div
+            class="flex flex-col flex-1 bg-[url('../assets/quick-access/1.png')] bg-cover bg-center p-10 text-textPrimary">
+            <div class="flex-grow">
+                <span class="text-secondary font-medium">
+                    تمام بازی‌های ما
+                </span>
+                <h5 class="text-3xl font-semibold mt-4">
+                    بازی های ترکسینو
+                </h5>
+                <p class="font-light text-base mt-4 mb-10">
+                    دنیای جدیدی را کشف کن، در نبردهای حماسی بجنگ و ماجراجویی‌های
+                    هیجان‌انگیز را تجربه کن.
+                    بازی کن، رقابت کن و لذتی از بازی ببر که تا حالا تجربه نکرده‌ای.
+                </p>
+            </div>
+            <div>
+                <a href="#"
+                    class="relative inline-block overflow-hidden text-secondary border-b-4 border-secondary py-2 px-6 transition-all duration-500 group hover:rounded-sm">
+                    <span class="relative z-10 group-hover:text-textPrimary duration-700">مشاهده همه</span>
+                    <span
+                        class="absolute inset-0 bg-secondary translate-y-full group-hover:translate-y-0 transition-transform duration-500"></span>
+                </a>
+            </div>
+        </div>
+        <div
+            class="flex flex-col flex-1 bg-[url('../assets/quick-access/2.png')] bg-cover bg-center p-10 text-textPrimary">
+            <div class="flex-grow">
+                <span class="text-secondary font-medium">
+                    به جامعه ما بپیوند </span>
+                <h5 class="text-3xl font-semibold mt-4">
+                    انجمن‌ها
+                </h5>
+                <p class="font-light text-base mt-4 mb-10">
+                    در گفتگوها شرکت کن، نکته‌ها و تجربیاتت رو به اشتراک بذار و با سایر گیمرها در ارتباط باش.
+                    اینجا مرکز اخبار، استراتژی‌ها و دیدگاه‌های جامعه‌ی بازیه.
+                </p>
+            </div>
+            <div>
+                <a href="#"
+                    class="relative inline-block overflow-hidden text-secondary border-b-4 border-secondary py-2 px-6 transition-all duration-500 group hover:rounded-sm">
+                    <span class="relative z-10 group-hover:text-textPrimary duration-700">
+                        پیوستن به انجمن
+                    </span>
+                    <span
+                        class="absolute inset-0 bg-secondary translate-y-full group-hover:translate-y-0 transition-transform duration-500"></span>
+                </a>
+            </div>
+        </div>
+        <div
+            class="flex flex-col flex-1 bg-[url('../assets/quick-access/3.png')] bg-cover bg-center p-10 text-textPrimary">
+            <div class="flex-grow">
+                <span class="text-secondary font-medium">
+                    راهنما و پشتیبانی
+                </span>
+                <h5 class="text-3xl font-semibold mt-4">
+                    مرکز کمک‌رسانی
+                </h5>
+                <p class="font-light text-base mt-4 mb-10">
+                    به پشتیبانی نیاز داری؟ پاسخ‌ها، آموزش‌ها و نکات رفع مشکل رو اینجا پیدا کن.
+                    سریع کمک بگیر و تجربه‌ی بازی روان و بدون دردسر داشته باش.
+                </p>
+            </div>
+            <div>
+                <a href="#"
+                    class="relative inline-block overflow-hidden text-secondary border-b-4 border-secondary py-2 px-6 transition-all duration-500 group hover:rounded-sm">
+                    <span class="relative z-10 group-hover:text-textPrimary duration-700">ارتباط با ما</span>
+                    <span
+                        class="absolute inset-0 bg-secondary translate-y-full group-hover:translate-y-0 transition-transform duration-500"></span>
+                </a>
+            </div>
+        </div>
+    </div>
 
 
 
