style: update feature section spacing and card borders

--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
     </section>
 
     <!-- Feature -->
-    <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row gap-4">
+    <div class="max-w-7xl mx-auto mt-24 px-4 flex flex-col md:flex-row gap-4">
         <div
-            class="flex flex-col flex-1 bg-[url('../assets/quick-access/1.png')] bg-cover bg-center p-10 text-textPrimary">
+            class="flex flex-col flex-1 bg-[url('../assets/quick-access/1.png')] bg-cover bg-center p-10 text-textPrimary rounded-sm">
             <div class="flex-grow">
                 <span class="text-secondary font-medium">
                     تمام بازی‌های ما
@@ -310,7 +310,7 @@
             </div>
         </div>
         <div
-            class="flex flex-col flex-1 bg-[url('../assets/quick-access/2.png')] bg-cover bg-center p-10 text-textPrimary">
+            class="flex flex-col flex-1 bg-[url('../assets/quick-access/2.png')] bg-cover bg-center p-10 text-textPrimary rounded-sm">
             <div class="flex-grow">
                 <span class="text-secondary font-medium">
                     به جامعه ما بپیوند </span>
@@ -334,7 +334,7 @@
             </div>
         </div>
         <div
-            class="flex flex-col flex-1 bg-[url('../assets/quick-access/3.png')] bg-cover bg-center p-10 text-textPrimary">
+            class="flex flex-col flex-1 bg-[url('../assets/quick-access/3.png')] bg-cover bg-center p-10 text-textPrimary rounded-sm">
             <div class="flex-grow">
                 <span class="text-secondary font-medium">
                     راهنما و پشتیبانی
